--- a/Templates/Electronica_Tem/elec_elec.html
+++ b/Templates/Electronica_Tem/elec_elec.html
@@ -10,7 +10,7 @@
 {{message}}
 
 <div class="d-flex" style="margin-top:5rem; margin-left:7rem">
-    {% for electro in object_list %}
+    {% for electro in lista_de_objetos %}
 
     <div class="card" style="width: 18rem;">
         <div class="card-body">
