--- a/Templates/base.html
+++ b/Templates/base.html
@@ -14,15 +14,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar " style="background: darkgray;">
-        <a class="navbar-brand" href="/">Inicio</a>
+    <nav class="navbar navbar-expand-lg bg-dark ">
+        <a class="navbar-brand" style="color:white ;10rem" href="/">MondiStore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto" >
                 <li class="nav-item">
                     <a class="nav-link" href="/electronica/">Electronicaaaaaaa</a>
                 </li>
