--- a/Templates/base.html
+++ b/Templates/base.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-dark ">
-        <a class="navbar-brand" style="color:white ;10rem" href="/">MondiStore</a>
+        <a class="navbar-brand" style="color:white" href="/">MondiStore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
