commit sin cambios

--- a/Templates/Electronica_Tem/agregar_elec.html
+++ b/Templates/Electronica_Tem/agregar_elec.html
@@ -22,9 +22,9 @@ Agregue aqui un equipo
         <h2 style="color:green; margin-left:33rem">Nuevo producto creado!!</h2>
         <div class="card" style="width: 18rem;background-color: aqua;margin-top:4rem;margin-left:35rem">
             <div class="card-body">
-                <h5 class="card-title">Nombre: {{new_product.name}}</h5>
-                <p class="card-text">Descripcion: {{new_product.description}}</p>
-                <p class="card-text">Precio: {{new_product.price}}</p>
+                <h5 class="card-title">Nombre: {{new_product.nombre}}</h5>
+                <p class="card-text">Descripcion: {{new_product.descripcion}}</p>
+                <p class="card-text">Precio: {{new_product.precio}}</p>
             </div>
         </div>
 
