corregi ver mas en electronica
corregi ver mas en electronica

--- a/Templates/Electronica_Tem/detalle_elec.html
+++ b/Templates/Electronica_Tem/detalle_elec.html
@@ -11,8 +11,8 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">{{object.nombre}}</h5>
-            <p class="card-text">{{object.descripcion}}</p>
             <p class="card-text">{{object.precio}}</p>
+            <p class="card-text">{{object.detalle}}</p>
             <a href="/electronica/actualizar/{{object.id}}/" class="btn btn-primary">Editar</a>
             <a href="/electronica/borrar/{{object.id}}/" class="btn btn-danger">Eliminar</a>
         </div>
