--- a/Templates/Electronica_Tem/elec_elec.html
+++ b/Templates/Electronica_Tem/elec_elec.html
@@ -17,7 +17,7 @@
             <h5 class="card-title">{{electro.nombre}}</h5>
             <p class="card-text">{{electro.descripcion}}</p>
             <p class="card-text">{{electro.precio}}</p>
-            <a href="/electronica/detalle-elec/{{electro.id}}/" class="btn btn-primary">Ver mas!</a>
+            <a href="/electronica/detalles/{{electro.id}}/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
 
