--- a/Templates/base.html
+++ b/Templates/base.html
@@ -9,9 +9,11 @@
         {% block titulo %}
         {% endblock %}
     </title>
+    <!--esto de acabo lo saque de bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-</head>
+    <!--hasta aca--> 
+    </head>
 
 <body>
     <nav class="navbar navbar-expand-lg bg-dark ">
@@ -60,12 +62,12 @@
     {% endblock %}
 
 </body>
-
+<!--esto de acabo lo saque de bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
     crossorigin="anonymous"></script>
-
+<!--hasta aca-->
 </html>
