--- a/Templates/Electronica_Tem/actualizar_elec.html
+++ b/Templates/Electronica_Tem/actualizar_elec.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-Actualizar Electrnica 
+Actualizar Electronica 
 {% endblock %}
 
 {% block contenido %}
