--- a/Templates/Electronica_Tem/detalle_elec.html
+++ b/Templates/Electronica_Tem/detalle_elec.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-    Detalle de Electronica
+    Detalles <!--Titulo de solapa-->
 {% endblock %}
 
 {% block contenido %}
