--- a/Templates/Electronica_Tem/elec_elec.html
+++ b/Templates/Electronica_Tem/elec_elec.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-    Productos
+    Electronica <!--titulo de solapa-->
 {% endblock %}
 
 {% block contenido %}
