--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-Inicio
+MondiStore
 {% endblock %}
 
 {% block contenido %}
-<h1>Aca va el contenido del index</h1>
+<h1 style="color:green ;margin-left:30rem">Bienvenidos a MondiStore <br><br> Un lugar de compra y venta de articulos de 1ra calidad</h1>
 
 <h3>{{message}}</h3>
 {% endblock %}
