--- a/Templates/base.html
+++ b/Templates/base.html
@@ -12,7 +12,7 @@
     <!--esto de acabo lo saque de bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <!--hasta aca--> 
+    <!--hasta aca-->
     </head>
 
 <body>
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto" >
                 <li class="nav-item">
-                    <a class="nav-link" href="/electronica/">Electronicaaaaaaa</a>
+                    <a class="nav-link" href="/electronica/">Electronica</a>
                 </li>
                 <li class="nav-item" style="margin-right: 30rem">
                     <a class="nav-link" href="/electronica/agregar/">Agregue electronica aqui</a>
@@ -47,7 +47,7 @@
                 </li>
                 {% endif %}
             </ul>
-            <form class="form-inline my-2 my-lg-0" action = "/electronica/buscar/" method = "GET">
+            <form class="form-inline my-2 my-lg-0" action = "/electronica/buscar/" method = "GET"><!--BARRA DE BUSQUEDA-->
                 <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search" name = 'search'>
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
